submission works and fixed scrollbar css

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,12 +31,20 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+::-webkit-scrollbar:vertical {
+  width: 5px;
+}
+
+::-webkit-scrollbar:horizontal {
+  height: 5px;
+}
+
 ::-webkit-scrollbar {
   width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 30px;
+  border-radius: 2.5em;
   // background: -webkit-gradient(linear, left top, left bottom, from(#ff8a00), to(#da1b60));
   background: -webkit-gradient(linear, left top, left bottom, from(#1815127e), to(#553d46));
   box-shadow: inset 2px 2px 2px rgba(255, 255, 255, .25), inset -2px -2px 2px rgba(0, 0, 0, .25);
@@ -44,7 +52,7 @@ body {
 
 ::-webkit-scrollbar-track {
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 1em;
   // background: linear-gradient(to right, #201c29, #201c29 1px, #100e17 1px, #100e17);
   background: none;
 }
